# PAKEs

./: .gitignore  .travis.yml  Cargo.toml  README.md  SECURITY.md
.cargo/: audit.toml
.github/workflows/: aucpace.yml  security-audit.yml  spake2.yml  srp.yml  workspace.yml
aucpace/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
aucpace/examples/: key_agreement.rs  key_agreement_no_std.rs  key_agreement_partial_aug.rs  key_agreement_strong.rs
aucpace/src/: client.rs  constants.rs  database.rs  errors.rs  lib.rs  server.rs  utils.rs
aucpace/tests/: test_key_agreement.rs  test_key_agreement_partial_aug.rs  test_key_agreement_strong.rs  test_key_agreement_strong_partial_aug.rs
benches/: spake2.rs
spake2/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
spake2/benches/: spake2.rs
spake2/src/: ed25519.rs  error.rs  group.rs  lib.rs  spake2.rs  tests.rs
spake2/tests/: mod.rs  spake2.rs
src/: client.rs  lib.rs  server.rs  spake2.rs  types.rs
srp/: CHANGELOG.md  Cargo.toml  README.md
srp/src/: client.rs  errors.rs  groups.rs  lib.rs  server.rs  tools.rs  types.rs  utils.rs
srp/tests/: bad_public.rs  mod.rs  rfc5054.rs  rfc5054_standard.rs  srp.rs
tests/: mod.rs
