[package]
name = "spake2"
version = "0.0.5-alpha.0"
authors = ["Brian Warner <warner@lothar.com>"]
description = "The SPAKE2 password-authenticated key-exchange algorithm, in Rust."
documentation = "https://docs.rs/spake2"
homepage = "https://github.com/warner/spake2.rs"
repository = "https://github.com/warner/spake2.rs"
license = "MIT"
categories = ["cryptography"]
exclude = [
    ".gitignore"
]

[badges]
travis-ci = { repository = "warner/spake2.rs" }

[dependencies]
curve25519-dalek = "0.15"
rand = "0.4"
sha2 = "0.7"
hkdf = "0.3"
num-bigint = "0.1"
hex = "0.3"

[dev-dependencies]
hex = "0.3"
bencher = "0.1"

[[bench]]
name = "spake2"
harness = false
