[package]
name = "aucpace"
version = "0.2.0-pre"
authors = ["Sam Leonard <tritoke@protonmail.com>"]
description = "AuCPace protocol implementation"
documentation = "https://docs.rs/aucpace"
homepage = "https://github.com/RustCrypto/PAKEs/tree/master/aucpace"
repository = "https://github.com/RustCrypto/PAKEs"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "pake", "authentication"]
categories = ["cryptography", "authentication"]
exclude = [".gitignore"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
curve25519-dalek = { version = "5.0.0-pre.3", default-features = false, features = ["digest", "rand_core"] }
password-hash = { version = "0.6.0-rc.6", default-features = false, features = ["phc", "rand_core"] }
rand_core = { version = "0.10.0-rc-3", default-features = false }
subtle = { version = "2.4", default-features = false }

# optional dependencies
rand = { version = "0.10.0-rc.5", optional = true }
serde = { version = "1.0.184", default-features = false, optional = true, features = ["derive"] }
serde-byte-array = { version = "0.1", optional = true }
scrypt = { version = "0.12.0-rc.7", default-features = false, optional = true, features = ["phc"] }
sha2 = { version = "0.11.0-rc.3", default-features = false, optional = true }

[dev-dependencies]
curve25519-dalek = { version = "5.0.0-pre.3", features = ["digest", "rand_core"] }
password-hash = { version = "0.6.0-rc.6", features = ["rand_core"] }
postcard = { version = "1", features = ["use-std"] }
scrypt = { version = "0.12.0-rc.7", features = ["phc"] }
sha2 = "0.11.0-rc.3"

[features]
default = ["rand", "scrypt", "sha2"]
alloc = []

partial_augmentation = []
serde = ["dep:serde", "serde-byte-array", "curve25519-dalek/serde"]
strong_aucpace = []
zeroize = ["curve25519-dalek/zeroize"]

[[example]]
name = "key_agreement"
required-features = ["default", "alloc", "serde"]

[[example]]
name = "key_agreement_no_std"
required-features = ["default", "serde"]

[[example]]
name = "key_agreement_partial_aug"
required-features = ["default", "alloc", "serde", "partial_augmentation"]

[[example]]
name = "key_agreement_strong"
required-features = ["default", "alloc", "serde", "strong_aucpace"]
