[package]
name = "spake2"
version = "0.5.0-pre"
authors = ["Brian Warner <warner@lothar.com>"]
description = "The SPAKE2 password-authenticated key-exchange algorithm."
documentation = "https://docs.rs/spake2"
homepage = "https://github.com/RustCrypto/PAKEs/tree/master/spake2"
repository = "https://github.com/RustCrypto/PAKEs"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "pake", "authentication"]
categories = ["cryptography", "authentication"]
exclude = [".gitignore"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
curve25519-dalek = { version = "5.0.0-pre.3", default-features = false, features = ["rand_core"] }
rand_core = { version = "0.10.0-rc-2", default-features = false }
sha2 = { version = "0.11.0-rc.3", default-features = false }
hkdf = { version = "0.13.0-rc.3", default-features = false }

# optional dependencies
rand = { version = "0.10.0-rc.5", optional = true }

[dev-dependencies]
bencher = "0.1"
hex = "0.4"
num-bigint = "0.4"

[features]
default = []
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "spake2"
harness = false
