[package]
name = "srp"
version = "0.7.0-pre.1"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = """
Pure Rust implementation of the Secure Remote Password (SRP) password-authenticated key exchange
(PAKE) algorithm as described in RFC5054. Built on `crypto-bigint`, a mathematical library
designed with constant-time algorithms.
"""
documentation = "https://docs.rs/srp"
repository = "https://github.com/RustCrypto/PAKEs"
keywords = ["crypto", "pake", "authentication"]
categories = ["authentication", "cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
crypto-bigint = { version = "0.7.0-rc.17", features = ["alloc"] }
digest = "0.11.0-rc.5"
subtle = { version = "2.4", default-features = false }

[dev-dependencies]
getrandom = { version = "0.4.0-rc.0", features = ["sys_rng"] }
hex-literal = "1"
sha1 = "0.11.0-rc.3"
sha2 = "0.11.0-rc.3"
